--- a/relatorio-clientes.html
+++ b/relatorio-clientes.html
@@ -5,6 +5,7 @@
   <link rel="icon" href="img/LOGO CME.png">
   <title>Relatório de Clientes</title>
   <link rel="stylesheet" href="CSS/relatorio-clientes.css">
+  <link rel="stylesheet" href="CSS/responsive.css">
 </head>
 <body>
   <div class="relatorio-container">
