--- a/relatorios.html
+++ b/relatorios.html
@@ -19,10 +19,16 @@
   <link rel="stylesheet" href="CSS/modal-vendasprodutos.css">
   <link rel="stylesheet" href="CSS/modal-estoque.css">
   <link rel="stylesheet" href="CSS/modal-saida-estoque.css">
+  <link rel="stylesheet" href="CSS/responsive.css">
 </head>
 <body>
+  <!-- Botão Hamburguer e Overlay (aparecem só no mobile) -->
+  <button class="hamburger-btn" id="hamburgerBtn" aria-label="Abrir menu" aria-controls="menuLateral" aria-expanded="false">
+    <span></span><span></span><span></span>
+  </button>
+  <div class="menu-overlay" id="menuOverlay"></div>
   <div class="app-container">
-    <nav class="menu-lateral">
+    <nav class="menu-lateral" id="menuLateral">
       <div class="menu-logo">
         <img src="img/LOGO CME.png" alt="Logo CME">
       </div>
@@ -80,6 +86,20 @@
   <script src="JS/relatorio-pagamentos.js"></script>
   <script src="JS/relatorio-estoque.js"></script>
   <script src="JS/relatorios.js"></script>
+  <script>
+    // Toggle do menu hambúrguer (mobile < 802px)
+    (function(){
+      const btn = document.getElementById('hamburgerBtn');
+      const overlay = document.getElementById('menuOverlay');
+      const menu = document.getElementById('menuLateral');
+      if(!btn || !overlay || !menu) return;
+      const closeMenu = () => { document.body.classList.remove('menu-open'); btn.setAttribute('aria-expanded','false'); };
+      const toggleMenu = () => { const open = document.body.classList.toggle('menu-open'); btn.setAttribute('aria-expanded', open ? 'true' : 'false'); };
+      btn.addEventListener('click', toggleMenu);
+      overlay.addEventListener('click', closeMenu);
+      menu.querySelectorAll('a,button').forEach(el => el.addEventListener('click', closeMenu));
+    })();
+  </script>
   <script>
     // Guard de autenticação (v8) para páginas de relatórios
     if (window.firebase && firebase.auth) {
